--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -130,39 +130,37 @@
         </div><!--/row-->
 
         <div class="row-fluid">
-            <div class="span12" class="widgets" widget-sort>
-                <div  >
-                    <div ng-repeat="widget in widgets" ng-show="isWidgetVisible(widget)" class="widget well pull-left" style="width: {{ widget.instance.width }}px;height:({{ widget.instance.height }}+80)px;">
-                        <div class="navbar">
-                            <div class="navbar-inner">
-                                <div class="container-fluid">
-                                    <a class="brand" href="#">{{ widget.title }}</a>
-                                    <a>{{ widget.id }}</a>
-                                    <ul ng-show="widget.is_offline_compatible" class="nav">
-                                        <li>
-                                            <a>
-                                                <span ng-show="isOnline" class="label label-success">Online</span>
-                                                <span ng-hide="isOnline" class="label label-important">Offline</span>
-                                            </a>
-                                        </li>
-                                        <li><a><span class="label label-info">Available {{ widget.data.available }}</span></a></li>
-                                        <li>
-                                            <a>
-                                                <span class="label " ng-class="{'label-success':widget.data.number_not_synchronized == 0, 'label-warning':widget.data.number_not_synchronized > 0}">
-                                                    Sync {{ widget.data.number_not_synchronized }}
-                                                </span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <ul class="nav pull-right">
-                                        <li><a ng-show="isOnline" ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
-                                    </ul>
-                                </div>
+            <div class="span12 widgets" widget-sort>
+                <div ng-repeat="widget in widgets" ng-show="isWidgetVisible(widget)" class="widget well pull-left" style="width: {{ widget.instance.width }}px;height:({{ widget.instance.height }}+80)px;">
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="container-fluid">
+                                <a class="brand" href="#">{{ widget.title }}</a>
+                                <a>{{ widget.id }}</a>
+                                <ul ng-show="widget.is_offline_compatible" class="nav">
+                                    <li>
+                                        <a>
+                                            <span ng-show="isOnline" class="label label-success">Online</span>
+                                            <span ng-hide="isOnline" class="label label-important">Offline</span>
+                                        </a>
+                                    </li>
+                                    <li><a><span class="label label-info">Available {{ widget.data.available }}</span></a></li>
+                                    <li>
+                                        <a>
+                                            <span class="label " ng-class="{'label-success':widget.data.number_not_synchronized == 0, 'label-warning':widget.data.number_not_synchronized > 0}">
+                                                Sync {{ widget.data.number_not_synchronized }}
+                                            </span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="nav pull-right">
+                                    <li><a ng-show="isOnline" ng-click="deleteWidget(widget)"><span class="label label-important">x</span></a></li>
+                                </ul>
                             </div>
                         </div>
-                        <hr>
-                        <div ng-bind-html-unsafe="renderWidgetIframe(widget)"></div>
                     </div>
+                    <hr>
+                    <div ng-bind-html-unsafe="renderWidgetIframe(widget)"></div>
                 </div>
             </div><!--/span-->
         </div><!--/row-->
