--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -29,8 +29,8 @@
         <p>{{ confirmation_text }}</p>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" ng-click="cancel()">Cancel</a>
-        <a href="#" class="btn btn-primary" ng-click="confirm()">Confirm</a>
+        <a class="btn" ng-click="cancel()">Cancel</a>
+        <a class="btn btn-primary" ng-click="confirm()">Confirm</a>
     </div>
 </div>
 
