--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -8,7 +8,7 @@
     <meta name="description" content="Personal Learning Environment with offline capabilities">
     <meta name="author" content="Roman Sachse">
 
-    {% stylesheets output='css/compiled/plesynd/main.css'
+    {% stylesheets filter="uglifycss" output='css/compiled/plesynd/main.css'
     'http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css'
     '@CorujaPlesyndBundle/Resources/public/app/application/application.css'
     %}
@@ -183,36 +183,37 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-{% javascripts output='js/compiled/plesynd/main.js'
-    '//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js'
-    '//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js'
-    '//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js'
-    'http://code.jquery.com/ui/1.9.1/jquery-ui.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-ui.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
-    '@CorujaPlesyndBundle/Resources/public/app/application/application.js'
-    '@CorujaPlesyndBundle/Resources/public/app/application/configuration-constants.js'
-    '@CorujaPlesyndBundle/Resources/public/app/plesynd/plesynd-controller.js'
-    '@CorujaPlesyndBundle/Resources/public/app/dashboard/dashboard-controller.js'
-    '@CorujaPlesyndBundle/Resources/public/app/workspace/workspace-controller.js'
-    '@CorujaPlesyndBundle/Resources/public/app/workspace/workspace-service.js'
-    '@CorujaPlesyndBundle/Resources/public/app/widget/widget-service.js'
-    '@CorujaPlesyndBundle/Resources/public/app/widget/widget-iframe-directive.js'
-    '@CorujaPlesyndBundle/Resources/public/app/widget/widget-sort-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-auth/coruja-auth-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-child-frame/coruja-child-frame-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-controller.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-frame-messenger/coruja-parent-frame-messenger-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-container-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-online-status/coruja-online-status-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-password-validator/coruja-password-validator-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
+{% javascripts filter="uglifyjs" output='js/compiled/plesynd/main.js'
+'//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js'
+'//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js'
+'//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js'
+'http://code.jquery.com/ui/1.9.1/jquery-ui.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular-ui.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
+'@CorujaPlesyndBundle/Resources/public/app/application/application.js'
+'@CorujaPlesyndBundle/Resources/public/app/application/configuration-constants.js'
+'@CorujaPlesyndBundle/Resources/public/app/plesynd/plesynd-controller.js'
+'@CorujaPlesyndBundle/Resources/public/app/dashboard/dashboard-controller.js'
+'@CorujaPlesyndBundle/Resources/public/app/workspace/workspace-controller.js'
+'@CorujaPlesyndBundle/Resources/public/app/workspace/workspace-service.js'
+'@CorujaPlesyndBundle/Resources/public/app/widget/widget-service.js'
+'@CorujaPlesyndBundle/Resources/public/app/widget/widget-iframe-directive.js'
+'@CorujaPlesyndBundle/Resources/public/app/widget/widget-sort-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-auth/coruja-auth-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-child-frame/coruja-child-frame-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-controller.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-frame-messenger/coruja-parent-frame-messenger-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-container-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-online-status/coruja-online-status-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-password-validator/coruja-password-validator-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-password-validator/coruja-password-validator-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
 %}
 <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
