--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" ng-app="application" gmanifest="/todo/cache.appcache">
+<html lang="en" ng-app="application" {% if app.debug == false %} manifest="/todo/cache.appcache" {% endif %}>
 <head>
     <meta charset="utf-8">
     <title>Todo</title>
-    {% stylesheets output='css/compiled/todo/main.css'
+    {% stylesheets filter="uglifycss" output='css/compiled/todo/main.css'
     'http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css'
     '@CorujaTodoBundle/Resources/public/app/application/application.css'
     %}
@@ -158,7 +158,7 @@
 </div>
 {% endraw %}
 
-{% javascripts output='js/compiled/todo/main.js'
+{% javascripts filter="uglifyjs" output='js/compiled/todo/main.js'
     '//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js'
     '//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js'
     '//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js'
