store libs locally

--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -183,14 +183,14 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 {% javascripts filter="uglifyjs" output='js/compiled/plesynd/main.js'
-'//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js'
-'//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js'
-'//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js'
-'http://code.jquery.com/ui/1.9.1/jquery-ui.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/jquery-1.8.2.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/bootstrap.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-ui.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
+'@CorujaPlesyndBundle/Resources/public/app/lib/jquery-ui-1.9.1.custom.js'
 '@CorujaPlesyndBundle/Resources/public/app/application/application.js'
 '@CorujaPlesyndBundle/Resources/public/app/application/configuration-constants.js'
 '@CorujaPlesyndBundle/Resources/public/app/plesynd/plesynd-controller.js'
