--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -159,31 +159,31 @@
 {% endraw %}
 
 {% javascripts filter="uglifyjs" output='js/compiled/todo/main.js'
-    '//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js'
-    '//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js'
-    '//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-ui.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
-    '@CorujaTodoBundle/Resources/public/app/application/application.js'
-    '@CorujaTodoBundle/Resources/public/app/application/configuration-constants.js'
-    '@CorujaTodoBundle/Resources/public/app/todo/todo-controller.js'
-    '@CorujaTodoBundle/Resources/public/app/todo/todo-service.js'
-    '@CorujaTodoBundle/Resources/public/app/todo/todo-blur-directive.js'
-    '@CorujaTodoBundle/Resources/public/app/todo/todo-focus-directive.js'
-    '@CorujaTodoBundle/Resources/public/app/todo-list/todo-list-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-auth/coruja-auth-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-controller.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-frame-messenger/coruja-child-frame-messenger-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-container-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-online-status/coruja-online-status-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-password-validator/coruja-password-validator-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
-    '@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/jquery-1.8.2.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/bootstrap.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular-ui.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
+'@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
+'@CorujaTodoBundle/Resources/public/app/application/application.js'
+'@CorujaTodoBundle/Resources/public/app/application/configuration-constants.js'
+'@CorujaTodoBundle/Resources/public/app/todo/todo-controller.js'
+'@CorujaTodoBundle/Resources/public/app/todo/todo-service.js'
+'@CorujaTodoBundle/Resources/public/app/todo/todo-blur-directive.js'
+'@CorujaTodoBundle/Resources/public/app/todo/todo-focus-directive.js'
+'@CorujaTodoBundle/Resources/public/app/todo-list/todo-list-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-auth/coruja-auth-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-controller.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-confirmation/coruja-confirmation-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-frame-messenger/coruja-child-frame-messenger-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-container-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-online-status/coruja-online-status-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-password-validator/coruja-password-validator-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
+'@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
 %}
 <script src="{{ asset_url }}"></script>
 
