--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -178,14 +178,12 @@
     </div><!--/.fluid-container-->
 </div>
 
-
-
 {% endraw %}
 
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-{% javascripts filter="uglifyjs" output='js/compiled/plesynd/main.js'
+{% javascripts filter="?uglifyjs" output='js/compiled/plesynd/main.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/jquery-1.8.2.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/angular.js'
 '@CorujaAngularModuleBundle/Resources/public/app/lib/bootstrap.js'
