umstellung auf Cookie Based Authentication

--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -160,8 +160,8 @@
 {% endraw %}
 
 <script type=text/javascript>
-//    var base_url = 'http://plesynd';
-    var base_url = 'http://beta.plesynd.de';
+    var base_url = 'http://plesynd/app_dev.php';
+//    var base_url = 'http://beta.plesynd.de';
 </script>
 
 {% javascripts filter="?uglifyjs" output='js/compiled/todo/main.js'
